# nuwaclaw

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md.new  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_EN.md  WINDOWS_CMD_WINDOW_VERIFICATION_REPORT.md  db_v2.sqlite3  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  test-mcp-config.json
crates/agent-client/: Cargo.toml
crates/agent-client/src/: app.rs  lib.rs  main.rs
crates/agent-client/src/components/: about.rs  chat.rs  client_info.rs  dependency_manager.rs  mod.rs  permissions.rs  remote_desktop.rs  root.rs  settings.rs  status_bar.rs
crates/agent-client/src/core/: admin_client.rs  agent.rs  auto_launch.rs  business_channel.rs  config.rs  crypto.rs  error.rs  file_transfer.rs  http_client.rs  json_config.rs  logger.rs  mod.rs  password.rs  protocol.rs  remote_input.rs  theme.rs  upgrade.rs
crates/agent-client/src/core/agent/: converter.rs  (+4 more)
crates/agent-client/src/i18n/: mod.rs
crates/agent-client/src/message/: chunking.rs  mod.rs
crates/agent-client/src/tray/: manager.rs  mod.rs
crates/agent-client/src/utils/: clipboard.rs  mod.rs
crates/agent-client/src/viewmodels/: agent_status.rs  client_info.rs  connection_status.rs  dependency.rs  mod.rs  permissions.rs  remote_desktop.rs  settings.rs  status_bar.rs
crates/agent-client/tests/: communication_test.rs  phase3_tests.rs  phase4_tests.rs  phase5_tests.rs  phase6_tests.rs
crates/agent-gpui-client/: Cargo.toml  DEPRECATED.md  packager.toml
crates/agent-gpui-client/assets/macos/: Info.plist  entitlements.plist
crates/agent-gpui-client/src/: app.rs  lib.rs  main.rs
crates/agent-gpui-client/src/components/: about.rs  chat.rs  client_info.rs  dependency_manager.rs  features.rs  mod.rs  permissions.rs  root.rs  settings.rs  status_bar.rs
crates/agent-gpui-client/src/tray/: manager.rs  mod.rs
crates/agent-gpui-client/src/viewmodels/: mod.rs
crates/agent-gpui-client/tests/: communication_test.rs  phase1_tests.rs  phase2_tests.rs  phase4_tests.rs  phase5_tests.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: error.rs  lib.rs  message.rs  version.rs
crates/agent-server-admin/: Cargo.toml
crates/agent-server-admin/src/: api.rs  auth.rs  business_connection.rs  dispatch.rs  main.rs  rustdesk_bridge.rs  state.rs
crates/agent-server-admin/src/api/: agents.rs  clients.rs  dto.rs  events.rs  mod.rs  status.rs  tasks.rs
crates/agent-server-admin/src/peer_connection/: manager.rs  mod.rs  rustdesk_transport.rs  transport.rs
crates/agent-server-admin/src/state/: client_store.rs  events.rs  mod.rs  models.rs  task_store.rs
crates/agent-tauri-client/src-tauri/: .gitignore  Cargo.toml  node-runtime.entitlements  tauri.ci.conf.json  tauri.conf.json
crates/agent-tauri-client/src-tauri/binaries/: .gitignore
crates/agent-tauri-client/src-tauri/capabilities/: default.json
crates/agent-tauri-client/src-tauri/fix_path_env/: mod.rs
crates/agent-tauri-client/src-tauri/icons/: icon.icns
crates/agent-tauri-client/src-tauri/resources/: download-node.sh
crates/agent-tauri-client/src-tauri/src/: lib.rs  main.rs
crates/data-server/: Cargo.toml  README.md
crates/data-server/src/: config.rs  main.rs
crates/nuwax-agent-core/: Cargo.toml
crates/nuwax-agent-core/src/: admin_client.rs  auto_launch.rs  business_channel_tests.rs  config.rs  crypto.rs  file_transfer.rs  file_transfer_tests.rs  json_config.rs  lib.rs  logger.rs  password.rs  permissions.rs  standalone_tests.rs
crates/nuwax-agent-core/src/agent/: converter.rs  executor.rs  manager.rs  mod.rs  task.rs
crates/nuwax-agent-core/src/agent_runner/: mod.rs  rcoder_impl.rs  tests.rs
crates/nuwax-agent-core/src/api/: mod.rs
crates/nuwax-agent-core/src/business_channel/: mod.rs
crates/nuwax-agent-core/src/connection/: adapter.rs  business_handler.rs  heartbeat.rs  mod.rs  peer.rs  reconnect.rs  state.rs
crates/nuwax-agent-core/src/dependency/: cli_tools.rs  detector.rs  docker.rs  git.rs  manager.rs  mod.rs  node.rs  npm_tools.rs  python.rs  uv.rs
crates/nuwax-agent-core/src/http_server/: error.rs  http_result.rs  mod.rs  types.rs
crates/nuwax-agent-core/src/i18n/: mod.rs
crates/nuwax-agent-core/src/message/: chunking.rs  mod.rs
crates/nuwax-agent-core/src/permissions/: mod.rs
crates/nuwax-agent-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/nuwax-agent-core/src/preflight/: mod.rs
crates/nuwax-agent-core/src/protocol/: mod.rs
crates/nuwax-agent-core/src/service/: config.rs  file_server.rs  health.rs  lanproxy.rs  mcp_library.rs  mcp_proxy.rs  mod.rs  process.rs  types.rs  utils.rs  windows_launch.rs
crates/nuwax-agent-core/src/upgrade/: checker.rs  downloader.rs  error.rs  installer.rs  mod.rs
crates/nuwax-agent-core/src/utils/: bundled_tools.rs  clipboard.rs  command.rs  mod.rs  notification.rs  path_env.rs
crates/nuwax-agent-core/src/viewmodels/: agent_status.rs  client_info.rs  connection_status.rs  dependency.rs  mod.rs  permissions.rs  remote_desktop.rs  settings.rs  status_bar.rs
crates/nuwax-platform/: Cargo.toml
crates/nuwax-platform/src/: lib.rs
crates/nuwax-platform/src/autostart/: mod.rs
crates/nuwax-platform/src/config/: mod.rs
crates/nuwax-platform/src/paths/: mod.rs
crates/nuwax-platform/src/permissions/: mod.rs
crates/nuwax-platform/src/tray/: mod.rs
crates/system-permissions/: Cargo.toml
crates/system-permissions/examples/: basic.rs  error_handling.rs  monitoring.rs
crates/system-permissions/src/: error.rs  factory.rs  lib.rs  monitor.rs  permissions_trait.rs  types.rs
crates/system-permissions/src/linux/: mod.rs
crates/system-permissions/src/macos/: mod.rs
crates/system-permissions/src/windows/: mod.rs
crates/system-permissions/tests/: integration.rs  unit.rs
poc/gui-agent/: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
poc/gui-agent/docs/: FINAL_REPORT.md  OSWORLD_README.md  PI_AGENT_README.md
poc/gui-agent/examples/: demo.ts  test_agent.py  test_agent_simple.py  test_image_locator.py
(+995 files in other folders)
