# Cargo.toml - Workspace 配置
[workspace]
members = [
    "crates/agent-gpui-client",
    "crates/agent-tauri-client/src-tauri",
    "crates/agent-server-admin",
    "crates/system-permissions",
    "crates/agent-protocol",
    "crates/nuwax-agent-core",
]
resolver = "2"

# 排除不需要构建的目录
exclude = [
    "vendors",
    "specs",
    "assets",
]

# 统一版本管理
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["nuwax <dev@nuwax.com>"]
repository = "https://github.com/nuwax/nuwax-agent"
license = "Apache-2.0"

# 依赖版本锁定
[workspace.dependencies]
# Async 运行时
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 工具库
dirs = "6.0"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
semver = "1.0"
base64 = "0.22"

# 并发
dashmap = "6.1"
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# 网络
reqwest = { version = "0.13", features = ["json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 加密
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.10"

# 强制锁定 core-text 版本，避免 core-graphics 版本冲突
# core-text 21.0.0 依赖 core-graphics ^0.24
# core-text 21.1.0 依赖 core-graphics ^0.25 (导致冲突)
core-text = "=21.0.0"

# Protobuf
prost = "0.14"
prost-types = "0.14"
bytes = "1.11"

# 压缩
# zip: 禁用 lzma/xz 特性以避免 lzma-rust2 的 crc 版本冲突
zip = { version = "8.1", default-features = false, features = ["aes-crypto", "bzip2", "deflate64", "deflate", "ppmd", "time", "zstd"] }
flate2 = "1.0"
tar = "0.4"

# 远程桌面依赖
# rustdesk - package name 为 rustdesk，lib 名为 librustdesk
librustdesk = { package = "rustdesk", git = "https://github.com/nuwax-ai/nuwax-rustdesk.git", features = ["agent-client"] }
# rustdesk-server (hbbs) - 使用 git 依赖
hbbs = { git = "https://github.com/nuwax-ai/nuwax-rustdesk-server.git" }

# Profiles - 在 workspace root 定义
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true
