# crates/agent-client/Cargo.toml
[package]
name = "nuwax-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "跨平台 Agent 客户端，支持远程桌面和 Agent 任务执行"
repository.workspace = true
license.workspace = true

[lib]
name = "nuwax_agent"
crate-type = ["rlib"]

[[bin]]
name = "nuwax-agent"
path = "src/main.rs"

# Feature 控制表
[features]
default = ["tray", "auto-launch", "dependency-management"]
# 系统托盘
tray = ["dep:tray-icon", "dep:muda", "dep:image"]
# 开机自启动
auto-launch = ["dep:auto-launch"]
# 依赖管理界面
dependency-management = ["dep:reqwest", "dep:flate2", "dep:tar"]
# 远程桌面功能
remote-desktop = ["dep:enigo"]
# 聊天界面
chat-ui = []
# 文件传输
file-transfer = []
# 开发者模式日志
dev-mode = []

[dependencies]
# Workspace 依赖
agent-protocol = { path = "../agent-protocol" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }

# 加密
argon2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
sha2 = "0.10"

# UI 框架 - crates.io 版本
gpui = "0.2.2"
gpui-component = "0.5"
# 强制使用 core-text 21.0.0 避免 core-graphics 冲突
core-text = { workspace = true }

# 系统托盘 (可选)
tray-icon = { version = "0.21.3", optional = true }
muda = { version = "0.17", optional = true }
image = { version = "0.25", optional = true }

# 开机自启动 (可选)
auto-launch = { version = "0.6.0", optional = true }

# 通信库 - nuwax-rustdesk (package name: rustdesk, lib name: librustdesk)
librustdesk = { package = "rustdesk", path = "../../vendors/nuwax-rustdesk", features = ["agent-client"] }

# 远程桌面
enigo = { version = "0.6.1", optional = true }

# 依赖管理
reqwest = { workspace = true, optional = true, features = ["stream"] }
flate2 = { workspace = true, optional = true }
zip = { workspace = true }
tar = { version = "0.4", optional = true }

# 系统信息
os_info = "3.9"

[dev-dependencies]
tempfile = "3.10"
rstest = "0.23"

[build-dependencies]
vergen-gitcl = { version = "1.0", features = ["build"] }
