# crates/agent-gpui-client/Cargo.toml
#
# GPUI 客户端实现
# 依赖 nuwax-agent-core 提供核心业务逻辑

[package]
name = "nuwax-gpui-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "跨平台 Agent 客户端（GPUI 实现），支持远程桌面和 Agent 任务执行"
repository.workspace = true
license.workspace = true

[lib]
name = "nuwax_gpui_agent"
crate-type = ["rlib"]

[[bin]]
name = "nuwax-gpui-agent"
path = "src/main.rs"

# Feature 控制表（与 nuwax-agent-core 保持一致）
[features]
default = ["tray", "auto-launch", "dependency-management"]
# 系统托盘
tray = ["dep:tray-icon", "dep:muda", "dep:image"]
# 开机自启动
auto-launch = ["dep:auto-launch"]
# 依赖管理界面
dependency-management = []
# 远程桌面功能
remote-desktop = ["nuwax-agent-core/remote-desktop", "dep:enigo"]
# 聊天界面
chat-ui = []
# 文件传输
file-transfer = ["nuwax-agent-core/file-transfer", "dep:enigo"]
# 开发者模式日志
dev-mode = []

[dependencies]
# Workspace 依赖
nuwax-agent-core = { path = "../nuwax-agent-core", features = ["p2p-connection"] }
agent-protocol = { path = "../agent-protocol" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }

# UI 框架 - crates.io 版本
gpui = "0.2.2"
gpui-component = "0.5"
# 强制使用 core-text 21.0.0 避免 core-graphics 冲突
core-text = { workspace = true }

# 系统托盘 (可选)
tray-icon = { version = "0.21.3", optional = true }
muda = { version = "0.17", optional = true }
image = { version = "0.25", optional = true }

# 开机自启动 (可选)
auto-launch = { version = "0.6.0", optional = true }

# 远程桌面
enigo = { version = "0.6.1", optional = true }

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
vergen-gitcl = { version = "1.0", features = ["build"] }
