# crates/data-server/Cargo.toml
[package]
name = "data-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "数据中转服务器（基于 rustdesk-server）"
repository.workspace = true
license.workspace = true

[[bin]]
name = "data-server"
path = "src/main.rs"

[dependencies]
# Workspace 依赖
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# rustdesk-server 封装
hbbs = { package = "hbbs", path = "../../vendors/rustdesk-server" }

[dev-dependencies]
tempfile = "3.10"
