# nuwax-agent-core - 公共核心库
#
# 无 UI 依赖的纯业务逻辑库，可被不同 UI 框架复用

[package]
name = "nuwax-agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "跨平台 Agent 核心库，无 UI 依赖"
repository.workspace = true
license.workspace = true

[lib]
name = "nuwax_agent_core"
crate-type = ["rlib", "cdylib"]

# Feature 控制表
[features]
default = ["auto-launch", "dependency-management", "async-trait", "rcoder"]
# P2P 连接（依赖 nuwax-rustdesk，需要 vcpkg）
p2p-connection = ["dep:librustdesk"]
# 开机自启动
auto-launch = ["dep:auto-launch"]
# rustls 加密提供者（用于测试）
rustls = ["dep:rustls"]
# 依赖管理功能
dependency-management = ["dep:reqwest", "dep:flate2", "dep:tar"]
# 远程桌面功能
remote-desktop = ["dep:enigo", "dep:librustdesk"]
# 文件传输
file-transfer = ["dep:enigo", "dep:librustdesk"]
# 开发者模式日志
dev-mode = []
# rcoder agent_runner 集成 (本地模式)
rcoder = ["dep:agent_runner", "dep:shared_types", "dep:agent_abstraction", "dep:arc-swap"]
# Pingora 代理服务（rcoder-proxy -> pingora，不支持 Windows）
proxy = ["agent_runner/proxy"]

[dependencies]
# Workspace 依赖
agent-protocol = { path = "../agent-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }

# rcoder agent_runner (通过 git 依赖)
agent_runner = { git = "https://github.com/nuwax-ai/rcoder.git", branch = "nuwax-client", optional = true, features = ["http-server"] }

# rcoder shared_types (通过 git 依赖)
shared_types = { git = "https://github.com/nuwax-ai/rcoder.git", branch = "nuwax-client", optional = true }

# rcoder agent_abstraction (通过 git 依赖)
agent_abstraction = { git = "https://github.com/nuwax-ai/rcoder.git", branch = "nuwax-client", optional = true }

# arc-swap (用于 API Key 配置的无锁读取)
arc-swap = { version = "1.7", optional = true }

# 加密
argon2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
sha2 = "0.10"

# 派生宏
derive_more = { version = "2.1", features = ["display"] }

# 通信库 - nuwax-rustdesk (package name: rustdesk, lib name: librustdesk)
# 可选依赖：通过 p2p-connection / remote-desktop / file-transfer feature 启用
librustdesk = { workspace = true, features = ["agent-client"], optional = true }

# 远程桌面
enigo = { version = "0.6.1", optional = true }
async-trait = { workspace = true, optional = true }

# 依赖管理
reqwest = { workspace = true, optional = true, features = ["stream"] }
flate2 = { workspace = true, optional = true }
zip = { workspace = true }
tar = { version = "0.4", optional = true }

# 系统信息
os_info = "3.9"
gethostname = "1.1"

# 可执行文件检测（跨平台）
which = "8.0"

# 开机自启动 (可选)
auto-launch = { version = "0.6.0", optional = true }

# 打开系统 URL (用于打开系统设置页面)
open = "5"

# 进程管理（确保子进程不会成为僵尸进程）
# tokio1 不在默认特性中，需要显式启用
# process-group: Unix 进程组管理
# job-object: Windows Job Object 管理（支持 CREATE_NO_WINDOW）
process-wrap = { version = "9", features = ["tokio1", "process-group", "job-object"] }

# rustls for crypto provider initialization (仅用于测试)
rustls = { version = "0.23", features = ["ring"], optional = true }

# HTTP Server (可选)
axum = { version = "0.8", optional = true, features = ["json", "macros"] }
tower-http = { version = "0.6", optional = true }

# Windows 注册表操作（用于开机自启动等）
[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.55"
windows = { version = "0.62", features = ["Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.10"
rstest = "0.26"
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
vergen-gitcl = { version = "1.0", features = ["build"] }
