[package]
name = "nuwax-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# 平台相关依赖
[target.'cfg(target_os = "macos")'.dependencies]
swift-dirs = "1.2"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10"
windows = "0.48"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.5"
