[package]
name = "nuwax-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# 通用依赖
dirs = "5.0"
thiserror = "2.0"
anyhow = "1.0"

# 平台相关依赖
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10"
windows = "0.48"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.5"
auto-launch = "0.6.0"
