# Cargo.toml - 系统权限管理库

[package]
name = "system-permissions"
description = "跨平台系统权限管理库，提供统一的接口获取 macOS/Windows/Linux 系统权限"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["chrono"]

# 启用时间戳支持
chrono = ["dep:chrono"]

# 启用序列化支持
serde = ["dep:serde"]

[dependencies]
# Async 运行时
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# 序列化 (可选)
serde = { workspace = true, optional = true }

# 时间处理
chrono = { workspace = true, optional = true }

# 错误处理
thiserror = { workspace = true }

# macOS 特定依赖
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = "0.3" 
core-foundation = "0.10"
core-graphics = "0.25"


# Windows 特定依赖
[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.62", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
# 注册表读取（参考 RustDesk，使用 winreg 替代原生 RegGetValueW，更安全简洁）
winreg = "0.55"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
