[package]
name = "agent-tauri-client"
version = "0.1.0"
description = "nuwax-agent-client"
authors = ["soddy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_tauri_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
tauri-plugin-process = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nuwax-agent-core = { path = "../../nuwax-agent-core", features = ["async-trait", "rcoder"] }
async-trait = "0.1"
system-permissions = { path = "../../system-permissions" }
auto-launch = "0.6.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = { workspace = true }
dirs = { workspace = true }
which = "8.0"
# rustls for crypto provider initialization
rustls = { version = "0.23", features = ["ring"] }
